[tvingLogin] fix: body의 overflow:hidden 이슈#100
잘못된 리액트 모달 마운트 방법으로 발생한 이슈 해결

--- a/src/layout/User/UserMain.module.css
+++ b/src/layout/User/UserMain.module.css
@@ -3,7 +3,7 @@
   width: calc(100% - 7.776rem);
   color: var(--white);
 
-  & .user__main__artice {
+  & .user__main__section {
     margin: 0 auto;
     max-width: 41.667rem;
     height: 100%;
